# ms-quick

./: .gitignore  CMakeLists.txt  README.md  app.sql  images.qrc  media.qrc  ms-quick.pro  plugin.json  qml.qrc
docs/: 使用的库和依赖.md
qml/: Loading.qml  Menu.qml  NotificationBox.qml  Toast.qml  Tray.qml  main.qml
qml/Emoji/: EmojiPicker.qml
qml/Home/: AddressBook.qml  Bar.qml  Coffee.qml  CompanyKnowledge.qml  DepartmentKnowledge.qml  Email.qml  Home.qml  HomeContent.qml  HomeFoot.qml  HomeHeader.qml  HomeLeftMenu.qml  MainContent.qml  Message.qml  Organization.qml  PersonalInformation.qml  PluginsManager.qml  Shop.qml  Task.qml  TeaDrink.qml
qml/IM/: ListMenuRight.qml  Navigation.qml  NotificationBox.qml  RoomListView.qml
qml/Login/: ImageBackColor.qml  Loading.qml  LoginHome.qml  LoginHomeBack.qml  LoginHomeButton.qml  LoginHomeField.qml  Logining.qml
src/: appquickview.cpp  appquickview.h  common.cpp  common.h  homeleftmenumodel.cpp  homeleftmenumodel.h  iappplugin.cpp  iappplugin.h  main.cpp
src/Emoji/: emojimodel.cpp  emojimodel.h
src/IM/: im.cpp  im.h  immediaaudio.cpp  immediaaudio.h  message.cpp  message.h  messagedbmodel.cpp  messagedbmodel.h  roomdbmodel.cpp  roomdbmodel.h  roommemberdbmodel.cpp  roommemberdbmodel.h  sqlconstant.h  user.cpp  user.h  userdb.cpp  userdb.h
src/Logger/: LoggerTemplate.h
src/SystemFeatures/: clipboard.cpp  clipboard.h
src/Utils/: logutils.cpp  logutils.h  systemutils.cpp  systemutils.h
